vaccs_pin_cpp/libs/read/out
echo "Compiling" dw_reader.cpp
Compiling dw_reader.cpp
g++ -c -I.. -g -fPIC -std=c++0x -Werror -Wall dw_reader.cpp
In file included from dw_reader.cpp:8:0:
dw_reader.h: In member function ‘const cu_table*& dw_reader::getCutab() const’:
dw_reader.h:39:10: error: invalid initialization of non-const reference of type ‘const cu_table*&’ from an rvalue of type ‘const cu_table*’
   return cutab;
          ^
dw_reader.h: In member function ‘void dw_reader::setCutab(const cu_table*&)’:
dw_reader.h:43:15: error: invalid conversion from ‘const cu_table*’ to ‘cu_table*’ [-fpermissive]
   this->cutab = cutab;
               ^
dw_reader.h: In member function ‘const string*& dw_reader::getFileName() const’:
dw_reader.h:47:10: error: invalid initialization of non-const reference of type ‘const string*& {aka const std::__cxx11::basic_string<char>*&}’ from an rvalue of type ‘const string* {aka const std::__cxx11::basic_string<char>*}’
   return file_name;
          ^
dw_reader.h: In member function ‘void dw_reader::setFileName(const string*&)’:
dw_reader.h:51:13: error: invalid conversion from ‘const string* {aka const std::__cxx11::basic_string<char>*}’ to ‘std::__cxx11::string* {aka std::__cxx11::basic_string<char>*}’ [-fpermissive]
   file_name = fileName;
             ^
dw_reader.h: In member function ‘const type_table*& dw_reader::getTtab() const’:
dw_reader.h:63:10: error: invalid initialization of non-const reference of type ‘const type_table*&’ from an rvalue of type ‘const type_table*’
   return ttab;
          ^
dw_reader.h: In member function ‘void dw_reader::setTtab(const type_table*&)’:
dw_reader.h:67:14: error: invalid conversion from ‘const type_table*’ to ‘type_table*’ [-fpermissive]
   this->ttab = ttab;
              ^
dw_reader.cpp: In member function ‘void dw_reader::read_dw_info()’:
dw_reader.cpp:32:67: error: format ‘%s’ expects argument of type ‘char*’, but argument 3 has type ‘std::__cxx11::string* {aka std::__cxx11::basic_string<char>*}’ [-Werror=format=]
             fprintf(stderr, "%s: %s\n", file_name, strerror(errno));
                                                                   ^
cc1plus: all warnings being treated as errors
Makefile:38: recipe for target 'dw_reader.o' failed
make: *** [dw_reader.o] Error 1
